--- a/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
+++ b/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
@@ -1020,6 +1020,21 @@
         document.querySelectorAll('.vpc-tag-input, .subnet-tag-input').forEach(tagInput => tagInput.remove());
     }
 
+    function showSubnetOverlay(vpcName) {
+        const region = '{{.RegionName}}';
+        const zone = '{{.Zone}}';
+
+        document.getElementById('subnetVPCName').value = vpcName;
+        document.getElementById('subnetVPCNameDisplay').value = vpcName;
+        document.getElementById('addSubnetZone').value = zone;
+        document.getElementById('addSubnetName').value = `${region}-${zone}-subnet-${Math.random().toString(36).substring(2, 5)}`;
+        document.getElementById('addSubnetCIDR').value = '10.0.2.0/24';
+
+        document.getElementById('subnet-overlay').style.display = 'flex';
+        document.addEventListener('keydown', handleEscSubnet);
+        clearSubnetFormFields();
+    }
+
     function hideSubnetOverlay() {
         document.getElementById('subnet-overlay').style.display = 'none';
         document.removeEventListener('keydown', handleEscSubnet);
