Add initial cluster management pages for AdminWeb2

--- a/api-runtime/rest-runtime/admin-web/html/vm.html
+++ b/api-runtime/rest-runtime/admin-web/html/vm.html
@@ -462,8 +462,12 @@ THE SOFTWARE.
         cursor: pointer;
     }
     #miscOverlay .overlay-content {
+        font-size: 14px;
+        width: 700px;
         position: relative;
-        padding-top: 40px;
+        padding-top: 30px;
+        line-height: 1.5;
+        white-space: pre-wrap;
     }
     #miscOverlay .close-btn {
         position: absolute;
