--- a/api-runtime/rest-runtime/admin-web/html/nlb.html
+++ b/api-runtime/rest-runtime/admin-web/html/nlb.html
@@ -318,9 +318,11 @@
     }
 
     .misc-overlay-content {
-        width: 100%;
-        height: 100%;
-        overflow-y: auto;
+        font-size: 14px;
+        width: 700px;
+        position: relative;
+        padding-top: 30px;
+        line-height: 1.5;
         white-space: pre-wrap;
     }
 
