Align table padding of AdminWeb2

--- a/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
+++ b/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
@@ -367,10 +367,12 @@
     .inner-table th {
         background-color: #f9f9f9;
         font-size: 12px;
+        padding: 2px;
         text-align: center;
     }
     .inner-table td {
         font-size: 12px;
+        padding: 2px;
         text-align: center;
     }
     .inner-table .tags-cell {
