Fix the missing link between AdminWeb2 and AdminWeb1

--- a/api-runtime/rest-runtime/admin-web/html/connection.html
+++ b/api-runtime/rest-runtime/admin-web/html/connection.html
@@ -527,19 +527,19 @@
                 <th>Connection Name</th>
                 <th>
                     Driver Name : Driver Library
-                    <a href="/spider/adminweb2/driver" class="mgmt-link">
+                    <a href="/spider/adminweb/driver" class="mgmt-link">
                         <img src="/spider/adminweb/images/mgmt.png" alt="Manage Driver">
                     </a>
                 </th>
                 <th>
                     Credential Name
-                    <a href="/spider/adminweb2/credential" class="mgmt-link">
+                    <a href="/spider/adminweb/credential" class="mgmt-link">
                         <img src="/spider/adminweb/images/mgmt.png" alt="Manage Credential">
                     </a>
                 </th>
                 <th>
                     Region Name : Region / Zone
-                    <a href="/spider/adminweb2/region" class="mgmt-link">
+                    <a href="/spider/adminweb/region" class="mgmt-link">
                         <img src="/spider/adminweb/images/mgmt.png" alt="Manage Region">
                     </a>
                 </th>
