--- a/api-runtime/rest-runtime/admin-web/html/left_menu.html
+++ b/api-runtime/rest-runtime/admin-web/html/left_menu.html
@@ -89,7 +89,7 @@
             changeSelectedImage(menu);
             const menuUrlMap = {
                 dashboard: "/spider/adminweb/dashboard?showEmpty=true",
-                connection: "/spider/adminweb2/connectionconfig"
+                connection: "/spider/adminweb/connectionconfig"
             };
 
             const targetUrl = menuUrlMap[menu];
@@ -140,7 +140,7 @@
     </script>
 </head>
 <body>
-    <a href="/spider/adminweb2" target="_top" class="menu-item logo">
+    <a href="/spider/adminweb" target="_top" class="menu-item logo">
         <img src="./images/logo.png" border="0">
     </a>
     <div class="divider"></div> <!-- Divider after logo -->
